# Poly-data-analysics

./: .env.example  .gitignore  README.md  agent_progress.md  encrypt_secret.py  modules_interfaces.md  pyproject.toml  redeem.md  summary.md  summary.md.bak  summary.md.pre_blog  testChain.py  同步思路讨论稿.md  启动文档.md  盈利机会挖掘.md
analysis/: fast_analysis.py  strategy_analysis.py
app/: __init__.py  bootstrap.py  config.py  env.py  main.py  runtime.py
core/: clock.py  enums.py  errors.py  event_bus.py  ids.py
dashboard/: DASHBOARD_TASK.md  app.js  index.html  server.py  styles.css
domain/: events.py  models.py
execution/: cancel_manager.py  intents.py  order_builder.py  polymarket_gateway.py  router.py
feeds/: __init__.py  base.py  binance_ws.py  chainlink_feed.py  polymarket_market_ws.py  polymarket_user_ws.py
local_sync_client/: .env.example  README.md  poly15_sync_client.py  run_sync.sh
market/: __init__.py  lifecycle.py  metadata_loader.py  registry.py
observability/: alerts.py  metrics.py
pricing/: __init__.py  binance_open_price.py  fair_value.py  lead_lag.py  quote_policy.py  vol_model.py
replay/: __init__.py  player.py  registry.py  runtime_runner.py
risk/: engine.py  rules.py
scripts/: build_dashboard_data.py  compare_theo_models.py  flush_live_records_to_sealed.py  run_collector.sh  run_dashboard.sh  scan_event_opportunities.py
security/: __init__.py  crypto.py  private_key.py
state/: __init__.py  book_state.py  inventory_state.py  order_state.py
storage/: __init__.py  database_writer.py  recorder.py  records_layout.py  snapshot_writer.py
(+33 files in other folders)
