[project]
name = "poly-15minbtc"
version = "0.1.0"
description = "Polymarket 15min BTC maker-first trading system"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10,<4",
    "cryptography>=42,<46",
    "py-clob-client>=0.25,<1",
    "python-dotenv>=1,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
